--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,6 @@
-<html lang="en"><head>
+<html lang="en">
+
+<head>
   <meta charset="utf-8">
   <title id="meta-title">$META_TITLE</title>
   <meta id="meta-description" name="description" content="$META_DESCRIPTION">
@@ -22,97 +24,131 @@
 
         <p id="bio">$BIO</p>
 
-        <a id="github" class="button button-github" href="$GITHUB" target="_blank" rel="noopener"><img class="icon" src="icons/github.svg" alt="GitHub Logo">GitHub</a>
+        <a id="github" class="button button-github" href="$GITHUB" target="_blank" rel="noopener"><img class="icon"
+            src="icons/github.svg" alt="GitHub Logo">GitHub</a>
         <br>
 
-        <a id="twitter" class="button button-twitter" href="$TWITTER" target="_blank" rel="noopener"><img class="icon" src="icons/twitter.svg" alt="Twitter Logo">Twitter</a>
+        <a id="twitter" class="button button-twitter" href="$TWITTER" target="_blank" rel="noopener"><img class="icon"
+            src="icons/twitter.svg" alt="Twitter Logo">Twitter</a>
         <br>
 
-        <a id="mastodon" class="button button-mastodon" href="$MASTODON" target="_blank" rel="noopener"><img class="icon" src="icons/mastodon.svg" alt="Mastodon Logo">Mastodon</a>
+        <a id="mastodon" class="button button-mastodon" href="$MASTODON" target="_blank" rel="noopener"><img
+            class="icon" src="icons/mastodon.svg" alt="Mastodon Logo">Mastodon</a>
         <br>
 
-        <a id="microblog" class="button button-microblog" href="$MICRO_BLOG" target="_blank" rel="noopener"><img class="icon" src="icons/microblog.svg" alt="Micro.blog Logo">Micro.blog</a>
+        <a id="microblog" class="button button-microblog" href="$MICRO_BLOG" target="_blank" rel="noopener"><img
+            class="icon" src="icons/microblog.svg" alt="Micro.blog Logo">Micro.blog</a>
         <br>
 
-        <a id="instagram" class="button button-instagram" href="$INSTAGRAM" target="_blank" rel="noopener"><img class="icon" src="icons/instagram.svg" alt="Instagram Logo">Instagram</a>
+        <a id="instagram" class="button button-instagram" href="$INSTAGRAM" target="_blank" rel="noopener"><img
+            class="icon" src="icons/instagram.svg" alt="Instagram Logo">Instagram</a>
         <br>
 
-        <a id="letterboxd" class="button button-letterboxd" href="$LETTERBOXD" target="_blank" rel="noopener"><img class="icon" src="icons/letterboxd.svg" alt="Letterboxd Logo">Letterboxd</a>
+        <a id="letterboxd" class="button button-letterboxd" href="$LETTERBOXD" target="_blank" rel="noopener"><img
+            class="icon" src="icons/letterboxd.svg" alt="Letterboxd Logo">Letterboxd</a>
         <br>
 
-        <a id="facebook" class="button button-facebook" href="$FACEBOOK" target="_blank" rel="noopener"><img class="icon" src="icons/facebook.svg" alt="Facebook Logo">Find us on Facebook</a>
+        <a id="facebook" class="button button-facebook" href="$FACEBOOK" target="_blank" rel="noopener"><img
+            class="icon" src="icons/facebook.svg" alt="Facebook Logo">Find us on Facebook</a>
         <br>
 
-        <a id="facebook-messenger" class="button button-messenger" href="$FACEBOOK_MESSENGER" target="_blank" rel="noopener"><img class="icon" src="icons/messenger.svg" alt="Facebook Messenger Logo">Chat on Messenger</a>
+        <a id="facebook-messenger" class="button button-messenger" href="$FACEBOOK_MESSENGER" target="_blank"
+          rel="noopener"><img class="icon" src="icons/messenger.svg" alt="Facebook Messenger Logo">Chat on Messenger</a>
         <br>
 
-        <a id="linkedin" class="button button-linkedin" href="$LINKED_IN" target="_blank" rel="noopener"><img class="icon" src="icons/linkedin.svg" alt="LinkedIn Logo">LinkedIn</a>
+        <a id="linkedin" class="button button-linkedin" href="$LINKED_IN" target="_blank" rel="noopener"><img
+            class="icon" src="icons/linkedin.svg" alt="LinkedIn Logo">LinkedIn</a>
         <br>
 
-        <a id="youtube" class="button button-youtube" href="$YOUTUBE" target="_blank" rel="noopener"><img class="icon" src="icons/youtube.svg" alt="YouTube Logo">YouTube</a>
+        <a id="youtube" class="button button-youtube" href="$YOUTUBE" target="_blank" rel="noopener"><img class="icon"
+            src="icons/youtube.svg" alt="YouTube Logo">YouTube</a>
         <br>
 
-        <a id="discord" class="button button-discord" href="$DISCORD" target="_blank" rel="noopener"><img class="icon" src="icons/discord.svg" alt="Discord Logo">Discord</a>
+        <a id="discord" class="button button-discord" href="$DISCORD" target="_blank" rel="noopener"><img class="icon"
+            src="icons/discord.svg" alt="Discord Logo">Discord</a>
         <br>
 
-        <a id="twitch" class="button button-twitch" href="$TWITCH" target="_blank" rel="noopener"><img class="icon" src="icons/twitch.svg" alt="Twitch Logo">Twitch</a>
+        <a id="twitch" class="button button-twitch" href="$TWITCH" target="_blank" rel="noopener"><img class="icon"
+            src="icons/twitch.svg" alt="Twitch Logo">Twitch</a>
         <br>
 
-        <a id="producthunt" class="button button-producthunt" href="$PRODUCT_HUNT" target="_blank" rel="noopener"><img class="icon" src="icons/producthunt.svg" alt="Product Hunt Logo">Product Hunt</a>
+        <a id="producthunt" class="button button-producthunt" href="$PRODUCT_HUNT" target="_blank" rel="noopener"><img
+            class="icon" src="icons/producthunt.svg" alt="Product Hunt Logo">Product Hunt</a>
         <br>
 
-        <a id="snapchat" class="button button-snapchat" href="$SNAPCHAT" target="_blank" rel="noopener"><img class="icon" src="icons/snapchat.svg" alt="Snapchat Logo">Snapchat</a>
+        <a id="snapchat" class="button button-snapchat" href="$SNAPCHAT" target="_blank" rel="noopener"><img
+            class="icon" src="icons/snapchat.svg" alt="Snapchat Logo">Snapchat</a>
         <br>
 
-        <a id="spotify" class="button button-spotify" href="$SPOTIFY" target="_blank" rel="noopener"><img class="icon" src="icons/spotify.svg" alt="Spotify Logo">Spotify</a>
+        <a id="spotify" class="button button-spotify" href="$SPOTIFY" target="_blank" rel="noopener"><img class="icon"
+            src="icons/spotify.svg" alt="Spotify Logo">Spotify</a>
         <br>
 
-        <a id="reddit" class="button button-reddit" href="$REDDIT" target="_blank" rel="noopener"><img class="icon" src="icons/reddit.svg" alt="Reddit Logo">Reddit</a>
+        <a id="reddit" class="button button-reddit" href="$REDDIT" target="_blank" rel="noopener"><img class="icon"
+            src="icons/reddit.svg" alt="Reddit Logo">Reddit</a>
         <br>
 
-        <a id="medium" class="button button-medium" href="$MEDIUM" target="_blank" rel="noopener"><img class="icon" src="icons/medium.svg" alt="Medium Logo">Medium</a>
+        <a id="medium" class="button button-medium" href="$MEDIUM" target="_blank" rel="noopener"><img class="icon"
+            src="icons/medium.svg" alt="Medium Logo">Medium</a>
         <br>
 
-        <a id="pinterest" class="button button-pinterest" href="$PINTEREST" target="_blank" rel="noopener"><img class="icon" src="icons/pinterest.svg" alt="Pinterest Logo">Follow on Pinterest</a>
+        <a id="pinterest" class="button button-pinterest" href="$PINTEREST" target="_blank" rel="noopener"><img
+            class="icon" src="icons/pinterest.svg" alt="Pinterest Logo">Follow on Pinterest</a>
         <br>
 
-        <a id="tiktok" class="button button-tiktok" href="$TIKTOK" target="_blank" rel="noopener"><img class="icon" src="icons/tiktok.svg" alt="TikTok Logo">TikTok</a>
+        <a id="tiktok" class="button button-tiktok" href="$TIKTOK" target="_blank" rel="noopener"><img class="icon"
+            src="icons/tiktok.svg" alt="TikTok Logo">TikTok</a>
         <br>
 
         <a id="email" class="button button-default" href="mailto:$EMAIL" target="_blank" rel="noopener">$EMAIL_TEXT</a>
         <br>
 
-        <a id="email-alt" class="button button-default" href="mailto:$EMAIL_ALT" target="_blank" rel="noopener">$EMAIL_ALT_TEXT</a>
+        <a id="email-alt" class="button button-default" href="mailto:$EMAIL_ALT" target="_blank"
+          rel="noopener">$EMAIL_ALT_TEXT</a>
         <br>
 
-        <a id="soundcloud" class="button button-soundcloud" href="$SOUND_CLOUD" target="_blank" rel="noopener"><img class="icon" src="icons/soundcloud.svg" alt="SoundCloud Logo">SoundCloud</a>
+        <a id="soundcloud" class="button button-soundcloud" href="$SOUND_CLOUD" target="_blank" rel="noopener"><img
+            class="icon" src="icons/soundcloud.svg" alt="SoundCloud Logo">SoundCloud</a>
         <br>
 
-        <a id="figma" class="button button-figma" href="$FIGMA" target="_blank" rel="noopener"><img class="icon" src="icons/figma.svg" alt="Figma Logo">Figma</a>
+        <a id="figma" class="button button-figma" href="$FIGMA" target="_blank" rel="noopener"><img class="icon"
+            src="icons/figma.svg" alt="Figma Logo">Figma</a>
         <br>
 
-        <a id="kit" class="button button-kit" href="$KIT" target="_blank" rel="noopener"><img class="icon" src="icons/kit.svg" alt="Kit Logo">Kit</a>
+        <a id="kit" class="button button-kit" href="$KIT" target="_blank" rel="noopener"><img class="icon"
+            src="icons/kit.svg" alt="Kit Logo">Kit</a>
         <br>
 
-        <a id="telegram" class="button button-telegram" href="$TELEGRAM" target="_blank" rel="noopener"><img class="icon" src="icons/telegram.svg" alt="Telegram Logo">Telegram</a>
+        <a id="telegram" class="button button-telegram" href="$TELEGRAM" target="_blank" rel="noopener"><img
+            class="icon" src="icons/telegram.svg" alt="Telegram Logo">Telegram</a>
         <br>
 
-        <a id="tumblr" class="button button-tumblr" href="$TUMBLR" target="_blank" rel="noopener"><img class="icon" src="icons/tumblr.svg" alt="Tumblr Logo">Tumblr</a>
+        <a id="tumblr" class="button button-tumblr" href="$TUMBLR" target="_blank" rel="noopener"><img class="icon"
+            src="icons/tumblr.svg" alt="Tumblr Logo">Tumblr</a>
         <br>
 
-        <a id="steam" class="button button-steam" href="$STEAM" target="_blank" rel="noopener"><img class="icon" src="icons/steam.svg" alt="Steam Logo">Steam</a>
+        <a id="steam" class="button button-steam" href="$STEAM" target="_blank" rel="noopener"><img class="icon"
+            src="icons/steam.svg" alt="Steam Logo">Steam</a>
         <br>
 
-        <a id="vimeo" class="button button-vimeo" href="$VIMEO" target="_blank" rel="noopener"><img class="icon" src="icons/vimeo.svg" alt="Vimeo Logo">Vimeo</a>
+        <a id="vimeo" class="button button-vimeo" href="$VIMEO" target="_blank" rel="noopener"><img class="icon"
+            src="icons/vimeo.svg" alt="Vimeo Logo">Vimeo</a>
         <br>
 
-        <a id="wordpress" class="button button-wordpress" href="$WORDPRESS" target="_blank" rel="noopener"><img class="icon" src="icons/wordpress.svg" alt="Wordpress Logo">Wordpress</a>
+        <a id="wordpress" class="button button-wordpress" href="$WORDPRESS" target="_blank" rel="noopener"><img
+            class="icon" src="icons/wordpress.svg" alt="Wordpress Logo">Wordpress</a>
         <br>
 
-        <a id="goodreads" class="button button-goodreads" href="$GOODREADS" target="_blank" rel="noopener"><img class="icon" src="icons/goodreads.svg" alt="Goodreads Logo">Goodreads</a>
+        <a id="goodreads" class="button button-goodreads" href="$GOODREADS" target="_blank" rel="noopener"><img
+            class="icon" src="icons/goodreads.svg" alt="Goodreads Logo">Goodreads</a>
         <br>
 
-        <a id="skoob" class="button button-skoob" href="$SKOOB" target="_blank" rel="noopener"><img class="icon" src="icons/skoob.svg" alt="Skoob Logo">Skoob</a>
+        <a id="skoob" class="button button-skoob" href="$SKOOB" target="_blank" rel="noopener"><img class="icon"
+            src="icons/skoob.svg" alt="Skoob Logo">Skoob</a>
+        <br>
+
+        <a id="whatsapp" class="button button-whatsapp" href="$WHATSAPP" target="_blank" rel="noopener"><img
+            class="icon" src="icons/whatsapp.svg" alt="WhatsApp Logo">WhatsApp</a>
         <br>
 
         <br>
@@ -124,4 +160,6 @@
   </div>
 
 
-</body></html>
+</body>
+
+</html>
